# django-vue-inertia-template

./: .env.example  .gitignore  README.md  bun.lockb  db.sqlite3  justfile  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vite.config.ts
backend/: views.py
config/: settings.py  urls.py
frontend/: views.py
frontend/static/src/: main.ts  style.css
frontend/static/src/pages/: Index.vue
frontend/templates/: index.html
